# tg_chatgpt_bot

./: .env.example  README.md  config.py  main.py  pyproject.toml
handlers/: basic.py  flag.py  handler_command.py  handler_get_message.py  handler_query.py  reset_conversation_handler.py
modules/: chatgpt_interface_m.py  describe_picture_m.py  personality_chat_m.py  quiz_m.py  random_fact_m.py  say_hi_m.py  voice_ai_m.py  welcome_m.py
services/: gpt_promts.py  openai_client.py  quiz_topics.py  whisper_client.py
