[project]
name = "tg-chatgpt-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander Pozdnyakov",email = "apozdnyakov@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
