[project]
name = "tg-chatgpt-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "k1tchenboyPS",email = "pozdniakoff.alex@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot (>=22.1,<23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
